New runtime flags to make performance tests more realistic (and should be more optimal).